# ensembl2graph

./: .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  logging.conf  pyproject.toml
src/ensembl_ingest/: cli.py  ftp2local.py  gff3transform.py
src/ensembl_ingest/utils/: config.py  exceptions.py  gene_utils.py  logging.py
test/: test_ftp2local.py
tests/: test_ftp2local.py  test_gene_utils.py  test_gff3transform.py  test_networkx_compatible.py
tests/resources/: Aegilops_tauschii_subset.gff  subset_node_link.json
